src/components/components/club-teaser-list/club-teaser.scss
@import './../../base-styles/init/init';

.club-teaser {

  &__inner {
    @include padding-top(20px);
    @include padding-bottom(20px);
    display: flex;
    width: 100%;
  }

  &__content-wrapper {
    border-radius: 2px;
  }

  &__content {
    width: auto;
    border-radius: 2px;
    margin: 0;
  }

  &__image-wrapper {
    min-width: 80px;
    min-height: 80px;
    width: 80px;
    height: 80px;
    border-radius: 22px;
    overflow: hidden;
    border: 4px solid color('white');
    position: relative;
    text-align: center;
    box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.1);
  }

  &__image {
    width: 100%;
    height: 100%;
    max-width: 100%;
    max-height: 100%;
  }

  &__text {
    @include padding-top(8px);
    @include padding-left(17px);
  }

  &__title {
    @include typeface('title');
    color: color('light-navy');
    letter-spacing: .2px;
    font-weight: 600;
    font-size: 18px;
    display: block;
  }

  &__description {
    @include font-size(12px);
    display: block;
    max-height: 42px;
    overflow: hidden;
  }

  &__button {
    @include margin-top(4.5px);
    font-weight: 600;


    // Overwrite plugin css.
    &.button {
      color: color('brand');
    }

    .icon {
      margin-left: 4px;
      margin-right: -4px;
    }
  }
}

